# skin-type-classifier

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  data.dvc  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: code-quality.yml  tests.yaml  tests.yml
configs/: learning_curve.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: data_cleaning.md  index.md
notebooks/: dataset_analysis.ipynb
outputs/2026-03-25/10-58-54/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-03-25/11-12-54/.hydra/: hydra.yaml
outputs/2026-03-25/12-07-20/.hydra/: config.yaml  hydra.yaml  overrides.yaml
reports/: .gitignore
reports/learning_curve/: results.csv  results.json
scripts/: check_data.py  run_learning_curve.py
src/skin_type_classifier/: config.py  evaluate.py  learning_curve.py  model.py  train.py  visualize.py
src/skin_type_classifier/data/: build_datasets.py  clean_fitzpatrick_17k.py  clean_pad_ufes.py  clean_scin.py  data.py  splits.py  transforms.py
tests/: conftest.py  test_build_datasets.py  test_clean_scin.py  test_data.py  test_dataset_validation.py  test_evaluate.py  test_learning_curve.py  test_model.py  test_splits.py  test_train.py  test_transforms.py
