[build-system]
requires = ["uv_build>=0.9.22,<0.11.0"]
build-backend = "uv_build"

[project]
name = "skin_type_classifier"
version = "0.0.1"
description = "From Public Datasets to Real-World Deployment:  Robust Skin-Type Classification in Teledermatology"
authors = [
  { name = "Alex Serrano", email = "alem5005@gmail.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "pandas>=3.0.1",
    "torch==2.10.0",
    "typer==0.24.1",
    "uvicorn==0.41.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.4",
    "invoke==2.2.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.15.5",
    "mypy==1.19.1",
    "mkdocs-material==9.7.5",
    "mkdocstrings-python==2.0.3",
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
